# slots-777

./: README.md
apisix/: .sing.txt  READ.me  apisixhelm-values.yaml
apisix/new-plugin/: custom-hmac-jwt.lua  custom-modiy-respone.lua  custom-vip-limt.lua  group-loop-slots.lua
slots-backend/: Cargo.toml
slots-backend/auth-service/: Cargo.toml
slots-backend/auth-service/src/: handler.rs  main.rs
slots-backend/common/: Cargo.toml
slots-backend/common/src/: jwt.rs  lib.rs  model.rs  redis.rs
slots-backend/game-service/: Cargo.toml
slots-backend/game-service/src/: logic.rs  main.rs  service.rs
slots-backend/gateway/: Cargo.toml
slots-backend/gateway/src/: grpc_client.rs  http.rs  main.rs  ws.rs
slots-backend/mq2db-service/: Cargo.toml
slots-backend/mq2db-service/src/: main.rs
slots-backend/proto/: Cargo.toml  build.rs
slots-backend/proto/proto/: game.proto  wallet.proto
slots-backend/proto/src/: lib.rs
slots-backend/wallet-service/: Cargo.toml
slots-backend/wallet-service/src/: main.rs  service.rs  wallet.rs
tauri-app/: ._.taurignore  Cargo.toml  Dioxus.toml
tauri-app/src/: app.rs  main.rs
tauri-app/src-tauri/: ._gen  tauri.conf.json
tauri-app/src/game/: mod.rs  reel.rs  state.rs
tauri-app/src/render/: canvas.rs  draw.rs  game_loop.rs  mod.rs
