[package]
name = "tauri-app-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-logger = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

#js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

gloo-render = "0.2.0"
rand = "0.10.1"
# 显式引入 getrandom，并开启它的 wasm_js 特性
getrandom = { version = "0.4.2", features = ["wasm_js"] }

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Performance"
] }
gloo-timers = { version = "0.3", features = ["futures"] }

[workspace]
members = ["src-tauri"]
