[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { path = "../proto" }
common = { path = "../common" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
jsonwebtoken = { workspace = true }
tonic = { workspace = true }
futures = "0.3.32"
