[package]
name = "mq2db-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tokio-postgres =  { version = "0.7", features = ["with-chrono-0_4"] }
chrono = "0.4"
anyhow = "1.0"
