[package]
name = "wallet-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
prost = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
anyhow = "1.0.102"
tonic-reflection = "0.14.5"

